# roomba_python

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  package.yml
docs/: alpha-release-checklist.md  error-handling-boundary-map.md  node-to-python-conversion-plan.md  node-to-python-method-mapping.md  reduced-python-api-openapi-companion.md  reduced-python-api-openapi-like.yaml  reduced-python-api-spec.md
examples/: basic_usage.py  command_execution.py  connect_lifecycle.py  discovery_flow.py  mission_read.py  preferences_update.py
roomba_python/: __init__.py  client.py  discovery.py  errors.py  models.py  transport.py  types.py
tests/: test_client_listeners.py  test_client_state_ingestion.py  test_client_validation.py  test_command_layer.py  test_discovery.py  test_models.py  test_preferences_mapping.py  test_schema_conformance.py  test_transport.py
