[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "roomba_python"
version = "0.1.0a0"
description = "Reduced-scope Python client for local Roomba control"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "dorita980 contributors" }]
keywords = ["roomba", "irobot", "mqtt", "iot"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Topic :: Home Automation",
]
dependencies = [
  "paho-mqtt>=2.1.0,<3.0.0",
  "pydantic>=2.8.0,<3.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0,<9.0.0",
  "pytest-cov>=5.0.0,<6.0.0",
  "ruff>=0.5.0,<1.0.0",
  "mypy>=1.10.0,<2.0.0",
  "jsonschema>=4.23.0,<5.0.0",
  "pyyaml>=6.0.2,<7.0.0",
]

[project.urls]
Homepage = "https://github.com/koalazak/dorita980"

[tool.hatch.build.targets.wheel]
packages = ["roomba_python"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = false
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
